--- a/src/views/layouts/header.ejs
+++ b/src/views/layouts/header.ejs
@@ -40,19 +40,8 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/category/cookie-minicake" style="background-color: #cf4a6b;color: White; font-size: 18px"><b>Cookie & Minicake</b></a>
                         </li> 
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" style="background-color: #cf4a6b;color: White; font-size: 18px"><b>Dự án</b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#" style="background-color: #cf4a6b;color: White; font-size: 18px">Bánh trường học</a></li>
-                                    <li><a class="dropdown-item" href="#" style="background-color: #cf4a6b;color: White; font-size: 18px">Quán Cafe</a></li>
-                                </ul>
-                            </a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" style="background-color: #cf4a6b;color: White;font-size: 18px"><b>Tin tức</b></a>
-                        </li> 
-                        <li class="nav-item">
-                            <a class="nav-link" href="" style="background-color: #cf4a6b;color: White;font-size: 18px"><b>Khuyến mại</b></a>
+                            <a class="nav-link" href="/promotion" style="background-color: #cf4a6b;color: White;font-size: 18px"><b>Khuyến mại</b></a>
                         </li>
                     </ul>
                 </div>
