--- a/src/views/layouts/footer.ejs
+++ b/src/views/layouts/footer.ejs
@@ -7,7 +7,7 @@
       <!-- LOGO + GIỚI THIỆU -->
       <div class="col-md-4 mb-4">
         <h4 class="fw-bold" style="color: white">🍰 Sweet Joy Bakery</h4>
-        <p>
+        <p style="color: white;">
           Bánh tươi mỗi ngày – Ngọt ngào từng khoảnh khắc.  
           Chuyên bánh sinh nhật, bánh mì – bánh mặn, cookie & minicake.
         </p>
@@ -26,17 +26,11 @@
 
       <!-- LIÊN HỆ -->
       <div class="col-md-4 mb-4">
-        <h5 class="fw-bold">Liên hệ</h5>
-        <p>📍 470 Trần Đại Nghĩa, Đà Nẵng</p>
-        <p>📞 0909 123 456</p>
-        <p>✉️ sweetjoybakery@gmail.com</p>
+        <h5 class="fw-bold" style="color: white;">Liên hệ</h5>
+        <p style="color: white;">📍 470 Trần Đại Nghĩa, Đà Nẵng</p>
+        <p style="color: white;">📞 0909 123 456</p>
+        <p style="color: white;">✉️ sweetjoybakery@gmail.com</p>
 
-        <!-- SOCIAL -->
-        <div class="d-flex gap-3 mt-3">
-          <a href="#" class="social-icon">🌐</a>
-          <a href="#" class="social-icon">📘</a>
-          <a href="#" class="social-icon">📸</a>
-        </div>
       </div>
 
     </div>
