--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -112,3 +112,17 @@
 
   <a href="/category/cookie-minicake" class="view-more" style="color: #000000;text-decoration: none;">Xem thêm</a>
 </section>
+<!-- =================  về chúng tôi  ================= -->
+
+<section class="row d-flex" id="about" data-aos="fade-up" >
+  <h1>Về chúng tôi</h1>      
+  <div class="row">
+    <div class="col-md-6 py-3 py-md-0">          
+        <img src="images/about.png" alt="">
+    </div>
+    <div class="col-md-6 py-3 py-md-0">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias explicabo nulla dicta perferendis cupiditate autem assumenda unde fugit? Corrupti ipsa fugiat similique voluptate temporibus, cupiditate cumque iusto? Necessitatibus suscipit qui molestias odit ad aspernatur harum aliquid ipsam nisi, culpa quae, magnam dolores cupiditate velit exercitationem ratione deleniti dignissimos labore quia esse ea quos consequuntur perferendis aliquam. Est assumenda doloremque nobis, tenetur fuga similique eligendi nihil non officia possimus aliquid animi nisi ipsum qui veritatis repellat harum accusamus odit iusto laudantium voluptatum ipsa ut fugit veniam. Voluptates sint molestiae officia consequuntur iure repudiandae autem reiciendis, perspiciatis veritatis soluta quia velit necessitatibus.</p>                
+      <div id="bt"><button>Read More...</button></div>
+    </div>
+  </div>
+</section>
